# MobileRobot

./: .gitignore  commands.txt  frames_2025-08-14_23.45.42.gv  frames_2025-08-15_01.39.48.gv  frames_2025-08-17_17.34.40.gv  frames_2025-08-17_17.35.01.gv
src/mm_bringup/: package.xml  setup.cfg  setup.py
src/mm_bringup/config/: arm_controller.yaml  base_controller.yaml  jsb.yaml  ros2_controllers.yaml  wheel_vel_test.yaml
src/mm_bringup/launch/: moveit_controllers.yaml  sim.launch.py
src/mm_description/: CMakeLists.txt  package.xml
src/mm_description/urdf/: mm_base.xacro  mm_robot.xacro
src/mm_moveit/: package.xml  setup.cfg  setup.py
src/mm_moveit/config/: kinematics.yaml  mm.srdf.xacro  moveit_controllers.yaml
src/mm_moveit/launch/: bringup.launch.py
src/mm_navigation/: package.xml  setup.cfg  setup.py
src/mm_navigation/config/: nav2_params.yaml
