<?xml version="1.0"?>
<package format="3">
  <name>mm_moveit</name>
  <version>0.0.1</version>
  <description>MoveIt bringup for mobile manipulator</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <!-- Python build -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime deps used by the launch -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

